--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "core-js": "^3.23.0",
         "regenerator-runtime": "^0.13.9",
         "stimulus-use": "^0.52.0",
+        "sweetalert2": "^11.7.27",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
