--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/serializer": "5.4.*",
         "symfony/stimulus-bundle": "^2.11",
         "symfony/twig-bundle": "5.4.*",
+        "symfony/ux-chartjs": "^2.11",
         "symfony/validator": "5.4.*",
         "symfony/webpack-encore-bundle": "^2.0",
         "symfony/yaml": "5.4.*",
