--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
         "@babel/preset-env": "^7.16.0",
         "@hotwired/stimulus": "^3.2.2",
         "@symfony/stimulus-bridge": "^3.2.2",
+        "@symfony/ux-chartjs": "file:vendor/symfony/ux-chartjs/assets",
         "@symfony/webpack-encore": "^4.0.0",
+        "chart.js": "^3.4.1 <3.9",
         "core-js": "^3.23.0",
         "regenerator-runtime": "^0.13.9",
+        "stimulus": "^2.0.0",
         "stimulus-use": "^0.52.0",
         "sweetalert2": "^11.7.27",
         "webpack": "^5.74.0",
