--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "stimulus-use": "^0.52.0",
         "sweetalert2": "^11.7.27",
         "webpack": "^5.74.0",
+        "webpack-bundle-analyzer": "^4.9.1",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
     },
