--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
         "@babel/preset-env": "^7.16.0",
         "@babel/preset-react": "^7.0.0",
         "@hotwired/stimulus": "^3.2.2",
+        "@popperjs/core": "^2.11.8",
         "@symfony/stimulus-bridge": "^3.2.2",
         "@symfony/ux-chartjs": "file:vendor/symfony/ux-chartjs/assets",
         "@symfony/webpack-encore": "^4.0.0",
         "chart.js": "^3.4.1 <3.9",
         "core-js": "^3.23.0",
+        "jquery": "^3.7.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "regenerator-runtime": "^0.13.9",
@@ -29,6 +31,6 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "bootstrap": "^4.6.2"
+        "bootstrap": "5.3.1"
     }
 }
