--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "bootstrap": "5.3.1"
+        "bootstrap": "5.3.1",
+        "stimulus-autocomplete": "^3.1.0"
     }
 }
